force-app/main/default/objects/Time__c/Time__c.object-meta.xml
<CustomObject>
    <label>Time</label>
    <nameField>
        <displayFormat>TE-{000000}</displayFormat>
        <label>Time Entry Nr.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>