force-app/main/default/objects/Time__c/fields/AbacusTimeType__c.field-meta.xml
<CustomField>
    <fullName>AbacusTimeType__c</fullName>
    <label>Abacus Time Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1024</fullName>
            </value>
            <value>
                <fullName>1036</fullName>
            </value>
            <value>
                <fullName>1037</fullName>
            </value>
            <value>
                <fullName>105</fullName>
            </value>
            <value>
                <fullName>110</fullName>
            </value>
            <value>
                <fullName>1100</fullName>
            </value>
            <value>
                <fullName>1135</fullName>
            </value>
            <value>
                <fullName>115</fullName>
            </value>
            <value>
                <fullName>120</fullName>
            </value>
            <value>
                <fullName>130</fullName>
            </value>
            <value>
                <fullName>140</fullName>
            </value>
            <value>
                <fullName>150</fullName>
            </value>
            <value>
                <fullName>155</fullName>
            </value>
            <value>
                <fullName>160</fullName>
            </value>
            <value>
                <fullName>200</fullName>
            </value>
            <value>
                <fullName>300</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>