force-app/main/default/objects/Time__c/fields/BillingReceiver__c.field-meta.xml
<CustomField>
    <fullName>BillingReceiver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Receiver</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TimeBillingReceiver</relationshipLabel>
    <relationshipName>Time</relationshipName>
    <type>Lookup</type>
</CustomField>