force-app/main/default/objects/Time__c/fields/BillingViaCompany__c.field-meta.xml
<CustomField>
    <fullName>BillingViaCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing via (Company)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Time (Billing via (Company))</relationshipLabel>
    <relationshipName>TimeBillingViaCompany</relationshipName>
    <type>Lookup</type>
</CustomField>