force-app/main/default/objects/Time__c/fields/CostsTotalTimeCHF__c.field-meta.xml
<CustomField>
    <fullName>CostsTotalTimeCHF__c</fullName>
    <formula>TimetrackerCostsHourCHF__c * DurationHhMmN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costs - Total Time (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>