force-app/main/default/objects/Time__c/fields/DailyWorkTime__c.field-meta.xml
<CustomField>
    <fullName>DailyWorkTime__c</fullName>
    <formula>CASE( MOD( DateFrom__c - DATE(1900, 1, 7), 7), 0, 0, 6, 0, 8)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Daily Work Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>