force-app/main/default/objects/Time__c/fields/DateFrom__c.field-meta.xml
<CustomField>
    <fullName>DateFrom__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Date (From)</label>
    <required>true</required>
    <type>Date</type>
</CustomField>