force-app/main/default/objects/Time__c/fields/DateUntil__c.field-meta.xml
<CustomField>
    <fullName>DateUntil__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Date (Until)</label>
    <required>true</required>
    <type>Date</type>
</CustomField>