force-app/main/default/objects/Time__c/fields/DurationBillingPeriod__c.field-meta.xml
<CustomField>
    <fullName>DurationBillingPeriod__c</fullName>
    <formula>IF(
AND(
DateFrom__c &gt;= ProjectCostCenter__r.DateFromBillingPeriod__c,
DateFrom__c &lt;= ProjectCostCenter__r.DateUntilBillingPeriod__c
), DurationHhMmN__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration (Billing Period)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>