force-app/main/default/objects/Time__c/fields/DurationHhMm__c.field-meta.xml
<CustomField>
    <fullName>DurationHhMm__c</fullName>
    <label>Duration (hh:mm)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>