force-app/main/default/objects/Time__c/fields/DurationHhMmN__c.field-meta.xml
<CustomField>
    <fullName>DurationHhMmN__c</fullName>
    <label>Duration</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>