force-app/main/default/objects/Time__c/fields/EndHhMm__c.field-meta.xml
<CustomField>
    <fullName>EndHhMm__c</fullName>
    <label>End (hh:mm)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>