force-app/main/default/objects/Time__c/fields/FullCostsTotalTimeCHF__c.field-meta.xml
<CustomField>
    <fullName>FullCostsTotalTimeCHF__c</fullName>
    <formula>TimetrackerFullCostsHourCHF__c * DurationHhMmN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Costs - Total Time (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>