force-app/main/default/objects/Time__c/fields/OutOfScope__c.field-meta.xml
<CustomField>
    <fullName>OutOfScope__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Out of Scope</label>
    <type>Checkbox</type>
</CustomField>