force-app/main/default/objects/Time__c/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <label>Package Name</label>
    <referenceTo>Package__c</referenceTo>
    <relationshipLabel>Time</relationshipLabel>
    <relationshipName>Time</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>