force-app/main/default/objects/Time__c/fields/PersonioImportId__c.field-meta.xml
<CustomField>
    <fullName>PersonioImportId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Darin wird die Buchungs-UUID von Personio abgespeichert</description>
    <externalId>true</externalId>
    <label>PersonioImportId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>