force-app/main/default/objects/Time__c/fields/PersonioImportTimeStamp__c.field-meta.xml
<CustomField>
    <fullName>PersonioImportTimeStamp__c</fullName>
    <label>PersonioImportTimeStamp</label>
    <type>DateTime</type>
</CustomField>