force-app/main/default/objects/Time__c/fields/ProjectName__c.field-meta.xml
<CustomField>
    <fullName>ProjectName__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project Name</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Time</relationshipLabel>
    <relationshipName>Time</relationshipName>
    <type>Lookup</type>
</CustomField>