force-app/main/default/objects/Time__c/fields/ProjectNr__c.field-meta.xml
<CustomField>
    <fullName>ProjectNr__c</fullName>
    <formula>Package__r.ProjectName__r.ProjectNr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Nr.</label>
    <type>Text</type>
</CustomField>