force-app/main/default/objects/Time__c/fields/RateHour__c.field-meta.xml
<CustomField>
    <fullName>RateHour__c</fullName>
    <label>Rate (Hour)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>