force-app/main/default/objects/Time__c/fields/RateOrigin__c.field-meta.xml
<CustomField>
    <fullName>RateOrigin__c</fullName>
    <label>Rate Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PackageRate</fullName>
                <label>Package Rate</label>
            </value>
            <value>
                <fullName>EmployeeSpecificRate</fullName>
                <label>Employee Specific Rate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>