force-app/main/default/objects/Time__c/fields/ServiceTotalTime__c.field-meta.xml
<CustomField>
    <fullName>ServiceTotalTime__c</fullName>
    <formula>DurationHhMmN__c * RateHour__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service - Total Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>