force-app/main/default/objects/Time__c/fields/ServiceTotalTimeCHF__c.field-meta.xml
<CustomField>
    <fullName>ServiceTotalTimeCHF__c</fullName>
    <formula>ServiceTotalTime__c * CurrencyRateToCHF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service - Total Time (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>