force-app/main/default/objects/Time__c/fields/ServiceTotalTimeOutOfScopeCHF__c.field-meta.xml
<CustomField>
    <fullName>ServiceTotalTimeOutOfScopeCHF__c</fullName>
    <formula>If(OutOfScope__c=true,ServiceTotalTime__c * CurrencyRateToCHF__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service - Total Time Out of Scope (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>