force-app/main/default/objects/Time__c/fields/ServiceType__c.field-meta.xml
<CustomField>
    <fullName>ServiceType__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WorkTime</fullName>
                <label>Work Time</label>
            </value>
            <value>
                <fullName>TravelTime</fullName>
                <label>Travel Time</label>
            </value>
            <value>
                <fullName>Manufaktur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>