force-app/main/default/objects/Time__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <formula>IF(
 AND(
ZImportSource__c =&quot;PrintPlus&quot;,
 ZImportTimeStamp__c =&quot;2017-04-13&quot;
),IMAGE(&quot;/resource/1492347261000/migration_red&quot;, 
&quot;Migration PP&quot;),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source</label>
    <type>Text</type>
</CustomField>