force-app/main/default/objects/Time__c/fields/StaffCostsTotalTimeCHF__c.field-meta.xml
<CustomField>
    <fullName>StaffCostsTotalTimeCHF__c</fullName>
    <formula>TimetrackerStaffCostsHourCHF__c * DurationHhMmN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Staff Costs - Total Time (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>