force-app/main/default/objects/Time__c/fields/StartHhMm__c.field-meta.xml
<CustomField>
    <fullName>StartHhMm__c</fullName>
    <label>Start (hh:mm)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>