force-app/main/default/objects/Time__c/fields/TimeRateHourCHF__c.field-meta.xml
<CustomField>
    <fullName>TimeRateHourCHF__c</fullName>
    <formula>RateHour__c * CurrencyRateToCHF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Rate - Hour (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>