force-app/main/default/objects/Time__c/fields/Timetracker__c.field-meta.xml
<CustomField>
    <fullName>Timetracker__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Timetracker</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Internal Contact</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Time</relationshipLabel>
    <relationshipName>Time</relationshipName>
    <type>Lookup</type>
</CustomField>