force-app/main/default/objects/Time__c/fields/TimetrackerCompany__c.field-meta.xml
<CustomField>
    <fullName>TimetrackerCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Timetracker Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Time (Timetracker Company)</relationshipLabel>
    <relationshipName>TimeTimetrackerCompany</relationshipName>
    <type>Lookup</type>
</CustomField>