force-app/main/default/objects/Time__c/fields/TimetrackerCostCenter__c.field-meta.xml
<CustomField>
    <fullName>TimetrackerCostCenter__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Timetracker - Cost Center</label>
    <referenceTo>CostCenter__c</referenceTo>
    <relationshipLabel>Time (Timetracker - Cost Center)</relationshipLabel>
    <relationshipName>TimeTracker</relationshipName>
    <type>Lookup</type>
</CustomField>