force-app/main/default/objects/Time__c/fields/TimetrackerCostCenterNr__c.field-meta.xml
<CustomField>
    <fullName>TimetrackerCostCenterNr__c</fullName>
    <label>Timetracker - Cost Center Nr.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>