force-app/main/default/objects/Time__c/fields/TimetrackerCostsHourCHF__c.field-meta.xml
<CustomField>
    <fullName>TimetrackerCostsHourCHF__c</fullName>
    <label>Timetracker - Costs Hour (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>