force-app/main/default/objects/Time__c/fields/TimetrackerFTEAbsolute__c.field-meta.xml
<CustomField>
    <fullName>TimetrackerFTEAbsolute__c</fullName>
    <label>Timetracker - FTE Absolute</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>