force-app/main/default/objects/Time__c/fields/TimetrackerFullCostsHourCHF__c.field-meta.xml
<CustomField>
    <fullName>TimetrackerFullCostsHourCHF__c</fullName>
    <label>Timetracker - Full Costs Hour (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>