force-app/main/default/objects/Time__c/fields/TimetrackerStaffNr__c.field-meta.xml
<CustomField>
    <fullName>TimetrackerStaffNr__c</fullName>
    <label>Timetracker Staff Nr.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>