force-app/main/default/objects/Time__c/fields/TimetrackerWorkload__c.field-meta.xml
<CustomField>
    <fullName>TimetrackerWorkload__c</fullName>
    <label>Timetracker - Workload %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>