force-app/main/default/objects/Time__c/fields/TimeValidatedHumanResources__c.field-meta.xml
<CustomField>
    <fullName>TimeValidatedHumanResources__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Time Validated - Human Resources</label>
    <type>Checkbox</type>
</CustomField>