force-app/main/default/objects/Time__c/fields/TimeValidatedProjectResponsible__c.field-meta.xml
<CustomField>
    <fullName>TimeValidatedProjectResponsible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Time Validated - Project Responsible</label>
    <type>Checkbox</type>
</CustomField>