force-app/main/default/objects/Time__c/fields/ValCheckValidTime__c.field-meta.xml
<CustomField>
    <fullName>ValCheckValidTime__c</fullName>
    <formula>TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ValCheckValidTime</label>
    <type>Checkbox</type>
</CustomField>