force-app/main/default/objects/Time__c/fields/ValCurrentUserIsNotTimeTracker__c.field-meta.xml
<CustomField>
    <fullName>ValCurrentUserIsNotTimeTracker__c</fullName>
    <formula>IF( 
AND(
Timetracker__r.User__r.Id != $User.Id, 
$User.CanTrackTimeForOthers__c = false
)
,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ValCurrentUserIsNotTimeTracker</label>
    <type>Checkbox</type>
</CustomField>