force-app/main/default/objects/Time__c/fields/ValNoDeleteProjectPackageClosed__c.field-meta.xml
<CustomField>
    <fullName>ValNoDeleteProjectPackageClosed__c</fullName>
    <formula>OR( 
  NOT(ISPICKVAL( ProjectName__r.ProjectStatus__c , &quot;Open&quot;)), 
  NOT(ISPICKVAL( Package__r.PackageStatus__c , &quot;Open&quot;)),
  AND( 
    NOT(ISBLANK(Package__r.PackageSuperior__c )),  
    NOT(ISPICKVAL(Package__r.PackageSuperior__r.PackageStatus__c,&quot;Open&quot;))
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ValNoDeleteProjectPackageClosed</label>
    <type>Checkbox</type>
</CustomField>