force-app/main/default/objects/Time__c/fields/ValTimetrackerIsCurrentUser__c.field-meta.xml
<CustomField>
    <fullName>ValTimetrackerIsCurrentUser__c</fullName>
    <formula>IF( Timetracker__r.User__r.Id = $User.Id ,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ValTimetrackerIsCurrentUser</label>
    <type>Checkbox</type>
</CustomField>