force-app/main/default/objects/Time__c/fields/ZTimetrackerPrintPlusMigration__c.field-meta.xml
<CustomField>
    <fullName>ZTimetrackerPrintPlusMigration__c</fullName>
    <description>14.12.2017, ary: PrintPlus Migrationsfeld</description>
    <label>ZTimetracker PrintPlus Migration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>