force-app/main/default/objects/Time__c/validationRules/TC001_TimeCard_No_Change_Package_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>TC001_TimeCard_No_Change_Package_Closed</fullName>
    <active>true</active>
    <description>The Time Card can not be changed.</description>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true,
 $User.IsHRManager__c =false,
 $User.IsProjectManager__c =false,

OR(
  NOT(ISPICKVAL(Package__r.PackageStatus__c , &quot;Open&quot;)),
  AND(
    NOT(ISBLANK( Package__r.PackageSuperior__c )),
    NOT(ISPICKVAL(Package__r.PackageSuperior__r.PackageStatus__c,&quot;Open&quot;))
  )
))</errorConditionFormula>
    <errorMessage>You are not allowed to create or change a Time Card since the Package or Parent Package is closed. Please contact the Project Manager for assistance.
(TC001)</errorMessage>
</ValidationRule>