force-app/main/default/objects/Time__c/validationRules/TC004_Only_Time_For_Yourself.validationRule-meta.xml
<ValidationRule>
    <fullName>TC004_Only_Time_For_Yourself</fullName>
    <active>true</active>
    <description>The Time Tracker can only track time for himself if not permission set available</description>
    <errorConditionFormula>AND(
$User.PS480FunctionValidationRulesActive__c =true,
Timetracker__r.User__r.Id &lt;&gt; $User.Id,
$User.CanTrackTimeForOthers__c =false,
 TimeValidatedHumanResources__c =false,
 TimeValidatedProjectResponsible__c  = false,
OR(
 ISNEW() ,
 ISCHANGED(Timetracker__c),
 ISCHANGED(DateFrom__c),
 ISCHANGED(DateUntil__c),
 ISCHANGED(DurationHhMm__c),
 ISCHANGED(DurationHhMmN__c),
 ISCHANGED(OutOfScope__c),
 ISCHANGED(Description__c)
)
)</errorConditionFormula>
    <errorMessage>You can not add tor edit ime for somebody else.
(TC004)</errorMessage>
</ValidationRule>