force-app/main/default/objects/Time__c/validationRules/TC005_Time_Tracker_No_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>TC005_Time_Tracker_No_Change</fullName>
    <active>true</active>
    <description>The Timer Tracker can not be changed anymore</description>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true,
ISCHANGED( Timetracker__c ))</errorConditionFormula>
    <errorMessage>You can not change the time tracker. Please get in touch with the Super User for assistance.
(TC005)</errorMessage>
</ValidationRule>