force-app/main/default/objects/Time__c/validationRules/TC006_PM_Validation_only_PM.validationRule-meta.xml
<ValidationRule>
    <fullName>TC006_PM_Validation_only_PM</fullName>
    <active>true</active>
    <description>The Time Card can only be validated by PM</description>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true,

 ISCHANGED(TimeValidatedProjectResponsible__c),
 $User.IsProjectManager__c =false
)</errorConditionFormula>
    <errorDisplayField>TimeValidatedProjectResponsible__c</errorDisplayField>
    <errorMessage>You are not allowed to validate the time card. Please contact your Super User for assistance.
(TC006)</errorMessage>
</ValidationRule>