force-app/main/default/objects/Time__c/validationRules/TC010_Service_Type_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>TC010_Service_Type_Mandatory</fullName>
    <active>true</active>
    <description>Time Card must have Service-Type</description>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true,
ISBLANK( TEXT( ServiceType__c  )))</errorConditionFormula>
    <errorDisplayField>ServiceType__c</errorDisplayField>
    <errorMessage>You must choose the Service Type.
(TC010)</errorMessage>
</ValidationRule>