force-app/main/default/objects/Time__c/validationRules/TC012_Currency_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>TC012_Currency_Mandatory</fullName>
    <active>true</active>
    <description>Time Card must have Currency</description>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true,
ISBLANK( TEXT(ProjectCurrency__c )))</errorConditionFormula>
    <errorDisplayField>ProjectCurrency__c</errorDisplayField>
    <errorMessage>You must choose a Project Currency.
(TC012)</errorMessage>
</ValidationRule>