force-app/main/default/objects/Time__c/validationRules/TC013_AbacusTimeType_SundayHolidays.validationRule-meta.xml
<ValidationRule>
    <fullName>TC013_AbacusTimeType_SundayHolidays</fullName>
    <active>true</active>
    <description>Only user with rights can change Abacus Time Type</description>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true,

$User.PiketSpecial__c =false,
ISCHANGED(AbacusTimeType__c),
ISPICKVAL(AbacusTimeType__c,&quot;1024&quot;)
)</errorConditionFormula>
    <errorMessage>You are not allowed to track Sunday &amp; Holidays 50% Additional Time.
(TC013)</errorMessage>
</ValidationRule>