force-app/main/default/objects/Time__c/validationRules/TC014_AbacusTimeType_Compensation.validationRule-meta.xml
<ValidationRule>
    <fullName>TC014_AbacusTimeType_Compensation</fullName>
    <active>true</active>
    <description>Only user with rights can change Abacus Time Type</description>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true,
 $User.CompensationTime__c ,
ISCHANGED(AbacusTimeType__c),
ISPICKVAL(AbacusTimeType__c,&quot;155&quot;)
)</errorConditionFormula>
    <errorMessage>You are not allowed to track Compensation Time.
(TC014)</errorMessage>
</ValidationRule>